correcting some repositories